# agent-runtime

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agent_runtime/: __init__.py  acp_client.py  cli.py  client.py  persistent_shell.py  server.py  terminal.py
tests/: test_acp_client.py  test_client.py  test_persistent_shell.py  test_server.py
